--- a/styles/index.css
+++ b/styles/index.css
@@ -5,17 +5,60 @@ body {
 
 .chat-box-container {
     background-color:#fff;
-    width:560px;
+    width:580px;
     margin:0 auto 0 auto;
 }
+
+/* chat send box ------------*/
 
 .chat-send-box {
     margin-top:50px;
     height:80px;
+    vertical-align: top;
+    position: relative;
 }
+
+.icon-octo {
+    background:url('../img/octo-icon.png');
+    width:60px;
+    height:60px;
+    top:10px;
+    left:5px;
+    display:block;
+    position: absolute;
+}
+
+.txt-chat {
+    width:380px;
+    height:40px;
+    top:17px;
+    left:75px;
+    display:block;
+    position:absolute;
+    font-size:14px;
+    padding-left:5px;
+}
+
+.btn-send {
+    width:100px;
+    height:40px;
+    background-color:#FAB846;
+    border:1px solid #FAB846;
+    top:20px;
+    right:10px;
+    position:absolute;
+    cursor:pointer;
+    font-size: 14px;
+    font-weight: 700;
+    color:#FFF;
+}
+
+/* chat msg box ----------------*/
 
 .chat-msg-box {
     margin-top:20px;
     min-height:200px;
 }
+
+
 
